# watershed

./: .gitignore  AGENTS.md  CANON.md  CLAUDE.md  MIGRATION.md  README.md  SKETCHES.md  TOPOGRAPHY.md  pyproject.toml
bedrock/: README.md
distributary/: README.md  pyproject.toml
distributary/src/distributary/: __init__.py  _compat.py  claims.py  dispatch_run.py  plan.py  worker_return.py
distributary/tests/: test_claims.py  test_dispatch_run.py  test_hello_ceremony.py  test_plan.py  test_worker_return.py
watershed-kernel/: AGENTS.md  Cargo.toml  DESIGN_DEBT.md  PRESSURE_TESTS.md  README.md  STOP_LINE.md
watershed-kernel/schemas/: ClaimKind.json  Deposit.json  FileClaim.json  Policy.json  PressureTest.json  RecoveredIntent.json  RollbackSpec.json  VerificationSpec.json  WorkClass.json
watershed-kernel/tests/compile_fail/: baseline_without_merge.rs  baseline_without_merge.stderr  compile_without_verification.rs  compile_without_verification.stderr  complete_run_before_running.rs  complete_run_before_running.stderr  construct_baseline_from_distributary.rs  construct_baseline_from_distributary.stderr  construct_completed_run_directly.rs  construct_completed_run_directly.stderr  construct_deposit_directly.rs  construct_deposit_directly.stderr  construct_merge_from_distributary.rs  construct_merge_from_distributary.stderr  construct_validated_plan_directly.rs  construct_validated_plan_directly.stderr  dispatch_twice.rs  dispatch_twice.stderr  dispatch_unvalidated_plan.rs  dispatch_unvalidated_plan.stderr  merge_done_rejects_optional_error.rs  merge_done_rejects_optional_error.stderr  merge_rejected_validation.rs  merge_rejected_validation.stderr  retry_completed_run.rs  retry_completed_run.stderr  review_done_rejects_boolean_verdict_bag.rs  review_done_rejects_boolean_verdict_bag.stderr  skip_intent_recovery.rs  skip_intent_recovery.stderr  task_state_rejects_dead_variants.rs  task_state_rejects_dead_variants.stderr  wait_done_rejects_kernel_task_state.rs  wait_done_rejects_kernel_task_state.stderr
watershed-kernel/watershed-contracts/: Cargo.toml  README.md
watershed-kernel/watershed-contracts/src/: lib.rs
watershed-kernel/watershed-distributary/: Cargo.toml  README.md
watershed-kernel/watershed-distributary/src/: dag.rs  lib.rs
watershed-kernel/watershed-tributary/: Cargo.toml  README.md
watershed-kernel/xtask/: Cargo.toml
(+153 files in other folders)
