[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watershed"
version = "0.1.0"
description = "A research lab in fluvial systems, internally fluent to LLMs and software."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
lab = "lab.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lab", "splay"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"
